fix: enhance scrollbar styles and update layout class names for better theming support

--- a/app/globals.css
+++ b/app/globals.css
@@ -126,3 +126,20 @@
 .monaco-editor > div > div > div {
   background-color: var(--background) !important;
 }
+
+::-webkit-scrollbar {
+    @apply w-2.5 h-2.5;
+   
+}
+
+::-webkit-scrollbar-track {
+    @apply bg-transparent
+}
+ 
+::-webkit-scrollbar-thumb {
+    @apply rounded-full bg-border border-[1px] border-transparent border-solid bg-clip-padding;
+}
+
+/* Firefox support */
+* {
+}
